Bug 261858 - First run wizard doesn't guide how to load an existing database
Summary: First run wizard doesn't guide how to load an existing database
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE4 version)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-02 13:00 UTC by Risto H. Kurppa
Modified: 2012-01-28 18:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Risto H. Kurppa 2011-01-02 13:00:45 UTC
First run shows the wizard:
-------
Welcome to KPA

If you're interested in trying out KPA demo database... choose the Load Demo button...

Alternatively you may start making your own database... pressing the Create my own database button.

[Load Demo] [Create my own database..] [Check my Feature set]

--------

At this stage there's no instruction how the user should work, if he has used KPA before (on previous installation / has the database on external disk / smthng) and has the database already somewhere.

I click the [create my own database] and get the message telling about the root directory and so on, and asking to point to the directory. 

SUGGESTION: Rephrase the welcome screen.

Welcome to KPhotoAlbum

KPhotoAlbum is a powerful free tool to archive, tag and manage your photos and videos. It will not modify or change your precious files, it only indexes them to a database and lets you easily easily find and manage your photos and videos.

Start by showing KPhotoAlbum where your photos are by pressing on Create My Own Database. Also select this button if you have an existing KPhotoAlbum database that you want to start using again.

If you feel safer first trying out KPhotoAlbum with prebuilt set of images, press the Load Demo button.

[Create My Own Database..] [Load Demo] [Check my Feature set]
(NOTE: CHANGE OF ORDER IN BUTTONS!)

New text for the next window:
TITLE: KPhotoAlbum database creation

KPhotoAlbum needs to know where your photos and videos are. For KPhotoAlbum to be able to find them, they all need to be under one root directory, for example /home/user/Images. In this directory you can have as many subdirectories you want, KPhotoAlbum will find them all for you.

Feel safe, KPhotoAlbum will not modify or edit any of your images, so you can simply point KPhotoAlbum to the directory where you already have all your images located.

If you have an existing KPhotoAlbum database and root directory somewhere, point KPhotoAlbum to that directory to start using it again.

Image/Video root directory:




I think these new texts would be a bit easier to read, encourage a new user in starting with his own photos and also guide a 'returning customer' to continue using his database.

(I'd like not to have to use the word 'Database'. It's a familiar term for IT people, but is it OK for a 80 years old granny..? But couldn't figure out anything nicer - as I'm an IT guy too.. :/)
Comment 1 Miika Turkia 2012-01-28 18:47:29 UTC
Git commit b6f55ed544895222c5c6a3de6fd7b36413a86d7a by Miika Turkia.
Committed on 28/01/2012 at 19:46.
Pushed by mturkia into branch 'master'.

Better introduction texts for first run

M  +21   -12   MainWindow/WelcomeDialog.cpp

http://commits.kde.org/kphotoalbum/b6f55ed544895222c5c6a3de6fd7b36413a86d7a