Better introduction texts for first run

BUG: 261858